--- a/amazon-s3-quickstart/src/main/resources/application.properties
+++ b/amazon-s3-quickstart/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-quarkus.s3.endpoint-override=http://localhost:8008
+quarkus.s3.endpoint-override=https://s3-openshift-storage.apps.ocp-lab2.its4u.eu
 
 quarkus.s3.aws.region=us-east-1
 quarkus.s3.aws.credentials.type=static
-quarkus.s3.aws.credentials.static-provider.access-key-id=test-key
-quarkus.s3.aws.credentials.static-provider.secret-access-key=test-secret
+quarkus.s3.aws.credentials.static-provider.access-key-id=MFVlsuNtyf0GMQYfrY9b
+quarkus.s3.aws.credentials.static-provider.secret-access-key=5b3HLY4TPs0SwNgkIOoBVuzmiHi107BSJXgJ2aZf
 
-bucket.name=quarkus.s3.quickstart
+bucket.name=quarkus.s3.quickstart-c6fa6bde-bc2e-475e-b314-2ee8626f0eff
