--- a/amazon-s3-quickstart/devfile.yaml
+++ b/amazon-s3-quickstart/devfile.yaml
@@ -21,7 +21,7 @@ parent:
 components:
   - name: image-build
     image:
-      imageName: java-quarkus-image:latest
+      imageName: its4u-dropbox:latest
       dockerfile:
         uri: src/main/docker/Dockerfile.jvm.staged
         buildContext: .
