--- a/amazon-s3-quickstart/devfile.yaml
+++ b/amazon-s3-quickstart/devfile.yaml
@@ -23,7 +23,7 @@ components:
     image:
       imageName: its4u-dropbox:latest
       dockerfile:
-        uri: src/main/docker/Dockerfile.jvm.staged
+        uri: src/main/docker/Dockerfile.jvm
         buildContext: .
         rootRequired: false
   - name: kubernetes-deploy
